--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">At Your Service</h2>
+                <h2 class="section-heading">Lock = Love</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -27,7 +27,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Production Ready</h3>
-                    <p class="text-muted">QA locks. Production locks. Whatever you want, wherever you want..</p>
+                    <p class="text-muted">QA locks. Production locks. Whatever locks.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
