--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -5,7 +5,7 @@
                 <h2 class="section-heading">Get Locked Today.</h2>
                 <hr class="light">
                 <p class="text-faded">Grep mutex provides a fast, off the shelf way to lock your application.</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                <a href="https://github.com/grepmutex/mutex" class="btn btn-default btn-xl">Get Started!</a>
             </div>
         </div>
     </div>
