--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -2,7 +2,7 @@
       <div class="container text-center">
           <div class="call-to-action">
               <h2>Free Download!</h2>
-              <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+              <a href="https://github.com/grepmutex/mutex/archive/master.zip" class="btn btn-default btn-xl wow tada">Download Now!</a>
           </div>
       </div>
   </aside>
