--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,4 +1,5 @@
 <section class="bg-primary" id="about">
+  <center><iframe width="560" height="315" src="https://www.youtube.com/embed/MMKoCv6Tfq4?version=3&loop=1&playlist=MMKoCv6Tfq4;rel=0&amp;controls=0&amp;showinfo=0;autoplay=1" frameborder="0" allowfullscreen></iframe></center>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
